# controller-DMX512

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  pytest.ini  requirements.txt
.backup/scripts/: this.sh
.devcontainer/: README-SERIAL.md  devcontainer.json  post-create.sh  setup-serial.sh
docs/: LEIAME.md
docs/investigacao/linguagem/: prompt.md  resultado.md
docs/pense/cursor/: prompt.md  resultado.md
docs/pense/docker/: resultado.md
docs/pense/vscode/: prompt.md  resultado.md
docs/pense/wsl2/: prompt.md  resultado.md
examples/: basic_usage.py
fixtures/: fog_machine_FM-1500.dmxfix  generico_16ch.dmxfix  led.dmxcol  led_bar_rgba_8ch.dmxfix  led_rgbw.dmxfix  moving_head_10ch.dmxfix  par_can_rgb.dmxfix  strobo_atomic_3000.dmxfix
scripts/: .functions-config  environments.sh  functions.sh  setup-serial.sh  setup-usbipd.ps1  this.sh
scripts/functions.d/: default_environment.sh  default_environments.sh
scripts/functions.d/blockchain/fabric/: generate_admin_msp.sh  generate_blockchain_config.sh  generate_cache_domain_msp.sh  generate_ccp_file_from_fablo_target.sh  generate_certificate_authority_item_for_ccp_file.sh  generate_certificate_authority_matcher_item_for_ccp_file.sh  generate_channel_item_for_ccp_file.sh  generate_environment.sh  generate_matcher_item_for_ccp_file.sh  generate_msp.sh  generate_msp_config.sh  generate_msps.sh  generate_orderer_msp.sh  generate_organization_item_for_ccp_file.sh  generate_peer_msp.sh  generate_user_msp.sh  remove_provisioner.sh
scripts/functions.d/configuration/environment/: get_environment_variable_from_docker_compose_file.sh  load_env_file.sh  replace_environment_variable_in_docker_compose_file.sh  replace_environment_variable_in_env.sh
scripts/functions.d/configuration/format/: convert_json_and_yaml.sh  get_value_from_json_or_yaml.sh  print_table_line.sh  print_table_separator_line.sh  replace_field_values_in_json_or_yaml.sh
scripts/functions.d/configuration/git/: configure_git.sh  configure_safe_directories.sh
scripts/functions.d/configuration/prompt/: get_input.sh
scripts/functions.d/configuration/text/: find_line_number_of_value_in_text.sh  transform_text_to_array.sh
scripts/functions.d/database/init/: generate_doltdb_database_init_script.sh  generate_postgres_database_init_script.sh
scripts/functions.d/files/generate/: create_data_file.sh
scripts/functions.d/files/manage/: create_directory.sh
scripts/functions.d/infrastructure/docker/: count_services_state.sh  run_and_check_services.sh
scripts/functions.d/logging/stderr/: error.sh  warning.sh
scripts/functions.d/misc/: apply_template.sh  check_provisioner_exists.sh  create_provisioner.sh  execute_on_super.sh  fix_hyperledger_explorer_start.sh  generate_bash_install_ca.sh  generate_batch_install_ca.sh  generate_node_config.sh  install_chrome.sh  install_firefly.sh  install_go.sh  install_latest_version.sh  install_node.sh  install_upx.sh  start_initialize_profile.sh  stop_initialize_profile.sh  super_this.sh  tcp_dump_server.sh
scripts/functions.d/network/api/: get_provisioner_token.sh  list_provisioners.sh
scripts/functions.d/network/hosts/: add_hosts.sh
scripts/functions.d/network/http/: get_latest_version.sh
scripts/functions.d/network/ports/: get_org_ports.sh
scripts/functions.d/network/ssh/: scp_download.sh  scp_upload.sh  ssh_base_run.sh  ssh_rsync.sh  ssh_run.sh  wait_ssh_server.sh
scripts/functions.d/network/wait/: wait_services_to_be.sh
scripts/functions.d/security/credentials/: generate_password.sh  (+1 more)
scripts/this.d/: _template.sh  build.sh  help.sh  lint.sh  run.sh  specify.sh  test.sh  update-lib.sh
src/controller_dmx512/: __init__.py  main.py
src/controller_dmx512/core/: __init__.py  channel.py  dmx_controller.py  fixture.py  protocol.py  rdm.py
src/controller_dmx512/gui/: __init__.py  channel_widget.py  fixture_widget.py  main_window.py  rdm_widget.py  universe_widget.py
src/controller_dmx512/utils/: __init__.py  color_utils.py  file_utils.py
tests/unit/: test_channel.py  test_controller.py  test_fixture.py  test_rdm.py
(+37 files in other folders)
